Revision history for Catmandu-DBI

{{$NEXT}}

0.0701  2017-11-13 09:05:26 CET
  - fix utf8 string bug

0.07  2017-11-09 13:40:42 CET
  - revert the changes made in 0.06 because of high memory usage in mysql and
    postgresql

0.06  2017-09-01 12:39:01 CEST
  - retain sth for faster iteration

0.0511  2017-01-09 13:56:38 CET
  - more pod

0.0510  2016-10-04 15:20:17 CEST
  - use installer ModuleBuild to make Travis happy

0.0509  2016-10-04 14:59:51 CEST
  - META file

0.0508  2016-10-04 14:29:12 CEST
  - set sqlite_use_immediate_transaction to true by default to allow safer
    multiprocess access

0.0507  2016-06-21 14:20:23 CEST
  - remove files MYMETA.json and MYMETA.yml

0.0506  2016-06-08 14:51:05 CEST
  - add prefix 'DBI:' to data_source automatically
  - fix memory leak in Catmandu::Store::DBI::Iterator

0.0505  2016-04-20 16:40:09 CEST
  - Add more documentation

0.0504  2016-02-19 12:31:06 CET
  - support field 'datetime'

0.0503  2015-10-13 16:13:54 CEST
  - Fix typo

0.0502  2015-10-13 16:07:07 CEST
  - Fix Pg quoting on index creation

0.0501  2015-10-13 11:26:42 CEST
  - Shallow copy default mapping
  - define VERSION in all packages

0.05  2015-10-08 11:12:04 CEST
  - Column mapping
  - Specialized Iterator
  - Synchronize VERSION's

0.0135 2015-04-14
  - BUG in Catmandu::Store::DBI for MySQL. identifier 'id' is of type
    'varchar', which is case insensitive.  This can easily be solved with the
    sql statement "alter table scans modify id varchar(255) binary".

0.0134 2015-01-26
  - BUG in Catmandu::Store::DBI: method 'dbh' crashes during global destruction
    (after call to DEMOLISH). Fixed by not accessing DBI interface during this fase.

0.0133 2015-01-16
  - BUG in Catmandu::Store::DBI::Bag: a reference to the database handle is
    stored in a variable outside the callback in function _build_create_*, and
    then used inside the callback. This only works as long as the database handle